--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,17 @@
 repos:
 - repo: https://github.com/rcmdnk/pyproject-pre-commit
-  rev: v0.3.6
+  rev: v0.3.4
   hooks:
-  - id: ruff-lint-diff
-  - id: ruff-lint
-  - id: ruff-format-diff
-  - id: ruff-format
-  - id: black-diff
-  - id: black
-  - id: blacken-docs
-  - id: autoflake-diff
-  - id: autoflake
-  - id: autopep8-diff
-  - id: autopep8
-  - id: isort-diff
-  - id: isort
-  - id: flake8
-  - id: bandit
-  - id: mypy
-  - id: shellcheck
-  - id: mdformat-check
-  - id: mdformat
+    - id: ruff-lint-diff
+    - id: ruff-lint
+    - id: ruff-format-diff
+    - id: ruff-format
+    - id: mypy
+    - id: numpydoc-validation
+    - id: shellcheck
+    - id: mdformat-check
+    - id: mdformat
+    - id: validate-pyproject
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v5.0.0
   hooks:
