chore: uncomment ignored directories in .gitignore feat: add project URLs and hydra-dummy script to pyproject.toml fix: remove config_file handling from fix_argv in utils.py test: refactor tests to use subprocess instead of monkeypatch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ dependencies = [
     "joblib>=1.4.2",
 ]
 
+[project.urls]
+Repository = "https://github.com/rcmdnk/hydra-utils"
+Homepage = "https://github.com/rcmdnk/hydra-utils"
+
 [dependency-groups]
 dev = [
     "tomli >= 2.0.1; python_version < '3.11'",
@@ -29,9 +33,8 @@ dev = [
     "types-six>=1.16.21.20241105",
 ]
 
-[project.urls]
-Repository = "https://github.com/rcmdnk/hydra-utils"
-Homepage = "https://github.com/rcmdnk/hydra-utils"
+[project.scripts]
+hydra-dummy = 'hydra_utils.dummy:main'
 
 [build-system]
 requires = ["hatchling"]
