--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,16 +2,16 @@ repos:
 - repo: https://github.com/rcmdnk/pyproject-pre-commit
   rev: v0.4.2
   hooks:
-    - id: ruff-lint-diff
-    - id: ruff-lint
-    - id: ruff-format-diff
-    - id: ruff-format
-    - id: mypy
-    - id: numpydoc-validation
-    - id: shellcheck
-    - id: mdformat-check
-    - id: mdformat
-    - id: validate-pyproject
+  - id: ruff-lint-diff
+  - id: ruff-lint
+  - id: ruff-format-diff
+  - id: ruff-format
+  - id: mypy
+  - id: numpydoc-validation
+  - id: shellcheck
+  - id: mdformat-check
+  - id: mdformat
+  - id: validate-pyproject
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v5.0.0
   hooks:
@@ -32,3 +32,7 @@ repos:
     - id: detect-aws-credentials
       args:
         - "--allow-missing-credentials"
+- repo: https://github.com/rhysd/actionlint
+  rev: v1.7.7
+  hooks:
+    - id: actionlint
