--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ on:
         type: choice
         default: "3.13"
         options:
+          - "3.14"
           - "3.13"
           - "3.12"
           - "3.11"
@@ -53,7 +54,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.13", "3.12", "3.11", "3.10"]
+        python-version: ["3.14", "3.12", "3.11", "3.10"]
     permissions:
       contents: write
     runs-on: ${{ matrix.os }}
@@ -92,5 +93,5 @@ jobs:
           coverage-push: "${{ env.IS_MAIN }}"
           coverage-push-condition: "branch=${{ env.MAIN_BRANCH }}, os=${{ env.MAIN_OS }}, python_version=${{ env.MAIN_PY_VER }}"
           github_token: "${{github.token}}"
-          pre-commit: "${{ env.IS_MAIN }}"
+          prek: "${{ env.IS_MAIN }}"
           tmate: "${{ env.DEBUG }}"
