--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 license = "apache-2.0"
 keywords = ["hydra", "hydra-core", "hydra-utils"]
 classifiers = []
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10"
 dependencies = [
     "hydra-core>=1.3.2",
     "joblib>=1.4.2",
