--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
   - id: ruff-format-diff
   - id: ruff-format
   - id: ty
-  - id: mypy
+  #- id: mypy
   - id: numpydoc-validation
   - id: shellcheck
   - id: mdformat-check
