fix: restrict supported Python versions to >=3.10,<3.14 to avoid Hydra 3.14 incompatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ readme = "README.md"
 license = "apache-2.0"
 keywords = ["hydra", "hydra-core", "hydra-utils"]
 classifiers = []
-requires-python = ">=3.10"
+# Hydra does not support Python 3.14 yet
+# https://github.com/facebookresearch/hydra/issues/3121
+requires-python = ">=3.10,<3.14"
 dependencies = [
     "hydra-core>=1.3.2",
     "joblib>=1.4.2",
