--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,6 @@ on:
         type: choice
         default: "3.13"
         options:
-          - "3.14"
           - "3.13"
           - "3.12"
           - "3.11"
@@ -54,7 +53,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.14", "3.12", "3.11", "3.10"]
+        python-version: ["3.12", "3.11", "3.10"]
     permissions:
       contents: write
     runs-on: ${{ matrix.os }}
